<resources>
    <string name="app_name">Cashier01</string>
    <string name="report">Отчеты</string>
    <string name="items">Товары</string>
    <string name="sell">Продажа</string>
    <string name="more">Ещё</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Сег</string>
    <string name="yest">Вч</string>
    <string name="lastWeek">Нед</string>
    <string name="lastMonth">Мес</string>
    <string name="lastSixMonth">6 мec</string>
    <string name="lastYear">Год</string>
    <string name="dec_08_2020">Dec 08 2020</string>
    <string name="dashdash">-</string>
    <string name="income">Приход:</string>
    <string name="expense">Расход:</string>
    <string name="earned">Выручка:</string>
    <string name="x">x</string>
    <string name="sale">Продажа</string>
    <string name="get">Приемки</string>
    <string name="orders">Заказы</string>
    <string name="status">Статус:</string>
    <string name="newStatus">Новый</string>
    <string name="clientComment">Комментарий клиента</string>
    <string name="itemsS">Товары:</string>
    <string name="upak">Упокуется</string>
    <string name="readyForPickUp">Готово</string>
    <string name="done">Завершено</string>
    <string name="phoneNumber">Номер телефона</string>
    <string name="username">Имя пользователя</string>
    <string name="passwordStar">Пароль *</string>
    <string name="requiredField">Обязательное поле</string>
    <string name="login">Войти</string>
    <string name="notRegistered">Еще нет аккаунта ?</string>
    <string name="register">Регистрация</string>
    <string name="storeName">Название магазина</string>
    <string name="address">Адрес</string>
    <string name="reenterPasswordStar">Повторите пароль *</string>
    <string name="mustContainSix">Должно состоять из мин 6 букв</string>
    <string name="pwdMustMatch">Пароли должны совпадать</string>
    <string name="alreadyRegistered">Уже есть аккаунт?</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="categoryname">CategoryName</string>
    <string name="userExists">Пользователь с таким именем уже существует!</string>
    <string name="pwdUserNameWrong">Неверный пароль или имя пользователья!</string>
    <string name="createNewCategory">Создать новую папку?</string>
    <string name="create">Создать</string>
    <string name="cancello">Отменить</string>
    <string name="folderName">Название</string>
    <string name="errorTryAgain">Произошла ошибка, Пожалуйста повторите заново!</string>
    <string name="scanItems">Сканировать</string>
    <string name="allowCameraUse">Пожалуйста дайте разрешение на пользоваться с камерой !</string>
    <string name="itemCost">Цена товара</string>
    <string name="createNewItem">Добавить новый товар</string>
    <string name="add">Добавить</string>
    <string name="itemCount">Количество</string>
    <string name="addNewItem">Добавить новый товар</string>
    <string name="byHand">Вводить вручную</string>
    <string name="barcode">Штрих код</string>
    <string name="totalTrans">Общая сумма:</string>
    <string name="som">сом</string>
    <string name="plusSign">+</string>
    <string name="_1">1</string>
    <string name="minusSign">-</string>
    <string name="itemsCheckout">Товары для покупки</string>
    <string name="hideList">Скрыть список</string>
    <string name="_0_c">0 c.</string>

    <string name="yesterday">Вчера</string>
    <string name="jan">Янв</string>
    <string name="dec">Дек</string>
    <string name="nov">Ноя</string>
    <string name="oct">Окт</string>
    <string name="sep">Сен</string>
    <string name="aug">Авг</string>
    <string name="july">Июль</string>
    <string name="june">Июнь</string>
    <string name="may">Май</string>
    <string name="apr">Апр</string>
    <string name="march">Март</string>
    <string name="feb">Фев</string>

    <string name="y">г</string>
    <string name="m">мес</string>
    <string name="d">д</string>
    <string name="h">ч</string>
    <string name="min">мин</string>
    <string name="s">сек</string>
    <string name="ddMMyyyy">dd.MM.yyyy</string>
    <string name="store">Магазин</string>
    <string name="delete">Удалить</string>
    <string name="deleteFromList">Удалить со списка?</string>
    <string name="enterBarcode">Введите штрихкод товара</string>
    <string name="barcode2">Штрихкод</string>
    <string name="search">Поиск</string>
    <string name="cashierWorkStart">Начало смены:</string>
    <string name="addNewCashier">Добавить кассира</string>
    <string name="mustSignInAsCashier">Для этой функции вам необходимо войти с аккаунта кассира</string>
    <string name="quit">Выйти</string>
    <string name="signOutAdminText">Вы хотите выйти с аккаунта Администратора?</string>
    <string name="addNewPacker">Добавить упаковщика</string>
    <string name="dayClosure">Закрытие смены</string>
    <string name="fullname">Ф.И.О</string>
    <string name="textLoginAs">Войти как админ / кассир</string>
    <string name="today1">Сегодня</string>
    <string name="passwordMustMatch">Пароли должны совподать</string>
    <string name="createNewCashierSuccess">Успешно создан новый кассир!</string>
    <string name="createNewPackerSuccess">Успешно создан новый аккаунт упаковщика!</string>
    <string name="receipt">Чек</string>
    <string name="itemCost2">Стоимость товара:</string>
    <string name="print">Распечатать</string>
    <string name="closeDayConfirmText">Выйти с ваше аккаунта?</string>
    <string name="showList">Показать список</string>
    <string name="addToCost">Прибавить (сумма):</string>
    <string name="addToCostPercent">Прибавить (процент):</string>
    <string name="_0">0</string>
    <string name="yourCost">Цена для продаж:</string>
    <string name="save">Сохранить</string>
    <string name="newOrders">Новые</string>
    <string name="confirmedOrders">Подтвержденные</string>
    <string name="paid">Оплачено</string>
    <string name="forDelivery">Доставка</string>
    <string name="forPickup">На вынос</string>
    <string name="notRegisteredUser">Незарегистрированный</string>
    <string name="orderType">Вид заказа</string>
    <string name="paymentStatus">Статус оплаты:</string>
    <string name="phoneNumber2">Номер телефона:</string>
    <string name="clientAddress">Адрес:</string>
    <string name="dash">-</string>
    <string name="verify">Подтвердить</string>
    <string name="callDelivery">Вызывать курьера</string>
    <string name="cancel">Отказать</string>
    <string name="confirmOrder">Подтвердить заказ?</string>
    <string name="confirm">Подтвердить</string>
    <string name="cash">Наличными</string>
    <string name="callUserAsk">Позвонить клиенту?</string>
    <string name="call">Позвонить</string>
    <string name="orderConfirmed">Заказ успешно принят</string>
    <string name="addressAndPhoneNumber">Адрес и номер телефона</string>
    <string name="ok">OK</string>
    <string name="callForDel">Вызывать курьера?</string>
    <string name="ofCourse">Конечно</string>
    <string name="noNoNeed">Нет, пока не надо</string>
    <string name="deliverySuccess">Заявка на курьера успешно отправлено!</string>
    <string name="deliveryCallFail">Произошла ошибка! Пожалуйста повторите заново попозже!</string>
</resources>