<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.reports.ReportsMainFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarReports"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="#f3f3f4">

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="21sp"
            android:background="#f3f3f4"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:text="@string/report"
            android:textColor="@color/colorPrimary"
            android:textSize="21sp" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/relativeReports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarReports"
        android:background="#fff">

        <LinearLayout
            android:id="@+id/linearViewWeekButtons"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonToday"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:background="@drawable/back_button_week"
                android:text="@string/today"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonYest"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:background="@drawable/back_button_week_unsel"
                android:text="@string/yest"
                android:textAllCaps="false"
                android:textColor="#3A3939"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonWeek"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:background="@drawable/back_button_week_unsel"
                android:text="@string/lastWeek"
                android:textAllCaps="false"
                android:textColor="#3A3939"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonMonth"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:background="@drawable/back_button_week_unsel"
                android:text="@string/lastMonth"
                android:textAllCaps="false"
                android:textColor="#3A3939"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button6Months"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:background="@drawable/back_button_week_unsel"
                android:text="@string/lastSixMonth"
                android:textAllCaps="false"
                android:textColor="#3A3939"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonYear"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:background="@drawable/back_button_week_unsel"
                android:text="@string/lastYear"
                android:textAllCaps="false"
                android:textColor="#3A3939"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearViewPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearViewWeekButtons"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:background="#fff">

                <TextView
                    android:id="@+id/textViewDate1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|end"
                    android:paddingStart="3dp"
                    android:paddingEnd="8dp"
                    android:text="@string/dec_08_2020"
                    android:textColor="#4E13F8"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/arr_down_f" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="6dp"
                android:layout_weight="0.1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/dashdash"
                    android:textColor="#4E13F8"
                    android:textSize="28sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:background="#fff">

                <TextView
                    android:id="@+id/textViewDate2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|start"
                    android:paddingStart="3dp"
                    android:paddingEnd="8dp"
                    android:text="@string/dec_08_2020"
                    android:textColor="#4E13F8"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/arr_down_f" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeIncome"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@+id/linearViewPeriod"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/back_button_week">

            <TextView
                android:id="@+id/textViewTextIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/income"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/incomeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="9dp"
                android:layout_toEndOf="@+id/textViewTextIncome"
                android:fontFamily="@font/roboto_medium"
                android:text="12390$"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewTextExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewTextIncome"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/expense"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/expenseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/incomeTextView"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/textViewTextExpense"
                android:fontFamily="@font/roboto_medium"
                android:text="390$"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewTextEarned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:text="@string/earned"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewTextEarned"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/roboto_medium"
                android:text="12000$"
                android:textColor="#fff"
                android:textSize="21sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearViewButtons"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_below="@+id/relativeIncome"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/buttonSale"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/back_button_week"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/sale"
                android:textColor="#fff"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/buttonIn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="32dp"
                android:layout_weight="1"
                android:background="@drawable/back_button_week_unsel"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/get"
                android:textColor="#000"
                android:textSize="19sp" />

        </LinearLayout>


    </RelativeLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeReports"
        android:layout_marginTop="8dp" />

</RelativeLayout>