<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.orders.detail.OrderDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarOderDetail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#f3f3f4">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/arrBackOrderDetail"
                android:layout_width="52dp"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_arrback_dark" />

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarOrderDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="52dp"
                android:layout_marginEnd="52dp"
                app:title="@string/orders"
                app:titleTextColor="@color/textColorDarker" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarOderDetail">

        <LinearLayout
            android:id="@+id/linearStatusButtons"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonNew"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/back_button_week"
                android:text="@string/newStatus"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonUpak"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:background="@drawable/back_button_week_unsel"
                android:text="@string/upak"
                android:textAllCaps="false"
                android:textColor="#3A3939"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonReady"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:background="@drawable/back_button_week_unsel"
                android:text="@string/readyForPickUp"
                android:textAllCaps="false"
                android:textColor="#3A3939"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDone"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:background="@drawable/back_button_week_unsel"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="#3A3939"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewClientCommentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearStatusButtons"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/clientComment"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textViewOrderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="13dp"
            android:layout_below="@+id/linearStatusButtons"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="#BA000000"
            android:textSize="12sp"
            tools:text="Order #0000012" />

        <TextView
            android:id="@+id/clientCommentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewClientCommentText"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="ETxttexjkandakj"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewTextItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clientCommentTextView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/itemsS"
            android:textSize="21sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewItems"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textViewTextItems"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_income" />

    </RelativeLayout>

</RelativeLayout>