<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.more.MoreMainFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewUserData"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/cashierUserNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:textSize="18sp"
                tools:text="Nurmukhamed Myktybek" />

            <TextView
                android:id="@+id/cashierPhoneTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cashierUserNameTextView"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="12dp"
                android:gravity="center"
                android:textSize="16sp"
                tools:text="+996999060999" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cashierPhoneTextView"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cashierWorkStart" />

                <TextView
                    android:id="@+id/startTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto_medium"
                    tools:text="Jan 20 12:30" />
            </LinearLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardViewUserData"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addNewCashierButton"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/back_button_week_unsel"
            android:gravity="center"
            android:text="@string/addNewCashier" />

        <TextView
            android:id="@+id/addNewPackerButton"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/back_button_week_unsel"
            android:gravity="center"
            android:text="@string/addNewPacker" />

        <TextView
            android:id="@+id/adminSignOutButton"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/back_button_week_unsel"
            android:gravity="center"
            android:text="@string/quit"
            android:textColor="#E80505" />


        <TextView
            android:id="@+id/closeTheDayButton"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/back_button_week_unsel"
            android:gravity="center"
            android:text="@string/dayClosure" />

    </LinearLayout>


</RelativeLayout>